Enhancements for better wrapping of Status Area icons - WIP, but is working! - TODOs:   - Make sure this is a good way to do things.   - Cleanup code.   - Tests.

--- a/src/ui/layout/layout.scss
+++ b/src/ui/layout/layout.scss
@@ -276,6 +276,10 @@
         margin-left: auto; // Mimics justify-content: flex-end when in single line mode.
       }
     }
+
+    &.--is-overflowing {
+      background: rgba(deeppink, 0.1);
+    }
   }
 
   /******************************* MAIN AREA */
